--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 
         <!--==================== TITLE and Favicon ====================-->
-        <title>Erol Bicer's Portfolio 👋</title>
+        <title>Babu's Portfolio 👋</title>
         <!-- <link rel="shortcut icon" type="image/png" href="assets/img/"> --> 
         <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
@@ -40,33 +40,9 @@
         <meta name="msapplication-TileImage" content="https://github.com/nucerl/myPortfolio/blob/main/assets/snaps/light.png?raw=true" />    
 
         <!-- HTML Meta Tags -->
-        <title>Erol Bicer's Portfolio 👋</title>
+        <title>Babu's Portfolio 👋</title>
         <meta name="description" content="High-level experience in nuclear safety analysis and multinational nuclear project development.">
 
-        <!-- Facebook Meta Tags -->
-        <meta property="og:url" content="https://www.erolbicer.com/">
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="Erol Bicer's Portfolio 👋">
-        <meta property="og:description" content="High-level experience in nuclear safety analysis and multinational nuclear project development.">
-        <meta property="og:image" content="https://github.com/nucerl/myPortfolio/blob/main/assets/snaps/light.png?raw=true">
-
-        <!-- Twitter Meta Tags -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta property="twitter:domain" content="erolbicer.com">
-        <meta property="twitter:url" content="https://www.erolbicer.com/">
-        <meta name="twitter:title" content="Erol Bicer's Portfolio 👋">
-        <meta name="twitter:description" content="High-level experience in nuclear safety analysis and multinational nuclear project development.">
-        <meta name="twitter:image" content="https://github.com/nucerl/myPortfolio/blob/main/assets/snaps/light.png?raw=true">
-
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-2367QRTG56"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-2367QRTG56');
-        </script>
 
     </head>
 
@@ -74,7 +50,7 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Erol Bicer</a>
+                <a href="#" class="nav__logo">Babu L M </a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
@@ -99,7 +75,7 @@
                             </a>
                         </li>
                         <li class="nav__item">
-                            <a href="#paper" class="nav__link">
+                            <a href="#Awards" class="nav__link">
                                 <i class="uil uil-scenery nav__icon"></i> Papers
                             </a>
                         </li>
@@ -131,13 +107,10 @@
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__social">
-                            <a href="https://www.linkedin.com/in/erolbicer/" target="_blank" class="home__social-icon">
+                            <a href="https://www.linkedin.com/in/babu-lm/" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
-                            <a href="https://www.researchgate.net/profile/Erol-Bicer/research" target="_blank" class="home__social-icon">
-                                <i class="uil uil-book-open"></i>
-                            </a>
-                            <a href="https://github.com/nucerl" target="_blank" class="home__social-icon">
+                            <a href="https://github.com/lm-babu" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
                             </a>
                         </div>
