--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
 
-                                    <image class="home__blob-img" x='12' y='18' xlink:href="assets/img/perfil.png"/>
+                                    <image class="home__blob-img" x='12' y='18' xlink:href="assets/img/babu.jpg"/>
                                 </g>
                             </svg>
                         </div>
@@ -157,7 +157,7 @@
                 <span class="section__subtitle">Introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/about.png" alt="Erol Bicer Nuclear Power Plants Summit Session" class="about__img">
+                    <img src="assets/img/babu.jpg" alt="Erol Bicer Nuclear Power Plants Summit Session" class="about__img">
 
 
                     <div class="about__data">
