--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <span class="section__subtitle">Introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/babu.jpg" alt="Erol Bicer Nuclear Power Plants Summit Session" class="about__img">
+                    <img src="assets/img/babu.png" alt="Erol Bicer Nuclear Power Plants Summit Session" class="about__img">
 
 
                     <div class="about__data">
@@ -165,19 +165,15 @@
 
                         <div class="about__info">
                             <div>
-                                <span class="about__info-title">07+</span>
+                                <span class="about__info-title">03</span>
                                 <span class="about__info-name">Years' <br> Experience</span>
                             </div>
 
                             <div>
-                                <span class="about__info-title">11+</span>
-                                <span class="about__info-name">Projects <br> Completed</span>
+                                <span class="about__info-title">2+</span>
+                                <span class="about__info-name">Projects <br></span>
                             </div>
 
-                            <div>
-                                <span class="about__info-title">08</span>
-                                <span class="about__info-name">Papers <br> Published</span>
-                            </div>
                         </div>
 
                         <div class="about__buttons">
@@ -202,7 +198,7 @@
                                 <i class="uil uil-brackets-curly skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">System Codes</h1>
+                                    <h1 class="skills__titles">Java Technologies</h1>
                                     <!-- <span class="skills__subtitle">More than 8 years</span> -->
                                 </div>
 
@@ -278,7 +274,7 @@
                                 <i class="uil uil-vector-square skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">CFD Codes</h1>
+                                    <h1 class="skills__titles">Tools</h1>
                                     <!-- <span class="skills__subtitle">More than 2 years</span> -->
                                 </div>
 
@@ -317,7 +313,7 @@
                                 <i class="uil uil-arrow skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">Programming Codes</h1>
+                                    <h1 class="skills__titles">Programming Lamguages</h1>
                                     <!-- <span class="skills__subtitle">More than 2 years</span> -->
                                 </div>
 
@@ -375,7 +371,7 @@
                                 <i class="uil uil-code-branch skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">Miscellaneous </h1>
+                                    <h1 class="skills__titles">Message Queue </h1>
                                     <!-- <span class="skills__subtitle">More than 2 years</span> -->
                                 </div>
 
