--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
 
-                                    <image class="home__blob-img" x='12' y='18' xlink:href="assets/img/babu.jpg"/>
+                                    <image class="home__blob-img" x='12' y='18' xlink:href="assets/img/babu.png"/>
                                 </g>
                             </svg>
                         </div>
 
                         <div class="home__data">
                             <h1 class="home__title">Hi, I am Babu Lingmanaidukandriga Mandhidi.</h1>
-                            <h3 class="home__subtitle">Master's Student in computer Science</h3>
-                            <p class="home__description">High-level experience in nuclear safety analysis at the plant, system, and component levels and multinational nuclear project development.</p>
+                            <h3 class="home__subtitle">MS in computer Science</h3>
+                            <p class="home__description">Software Developer with 3 years of experience in Back-end java spring boot MicroServices development in Ecommerce and payment domain.</p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me <i class="uil uil-message button__icon"></i>
                             </a>
@@ -157,27 +157,21 @@
                 <span class="section__subtitle">Introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/babu.png" alt="Erol Bicer Nuclear Power Plants Summit Session" class="about__img">
-
-
+                    <img src="assets/img/babu.jpg" alt="Erol Bicer Nuclear Power Plants Summit Session" class="about__img">
                     <div class="about__data">
-                        <p class="about__description">Nuclear engineer, with extensive knowledge and years of experience, specialized in nuclear safety using safety analysis and computational fluid dynamics codes.</p>
-
+                        <p class="about__description">Software Development engineer, with extensive knowledge and three years of experience, specialized in Spring-boot Microservices and Amazon web Services</p>
                         <div class="about__info">
                             <div>
                                 <span class="about__info-title">03</span>
                                 <span class="about__info-name">Years' <br> Experience</span>
                             </div>
-
                             <div>
                                 <span class="about__info-title">2+</span>
                                 <span class="about__info-name">Projects <br></span>
                             </div>
-
                         </div>
-
                         <div class="about__buttons">
-                            <a download="" href="assets/pdf/ErolBicer-Resume.pdf" class="button button--flex">
+                            <a download="" href="assets/pdf/Updated_Resume.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
