--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
                                 </div>
                             </div>
                         </div>
-
+                    </div>
+                    
                         <!--==================== SKILLS 2 ====================-->
                         <div class="skills__content skills__close">
                             <div class="skills__header">
@@ -331,7 +332,7 @@
                             </div>
                         </div>                        
                     </div>
-
+                   
                     <div>
                         <!--==================== SKILLS 3 ====================-->
                         <div class="skills__content skills__close">
