git fix 4 rows in skills

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                 <i class="uil uil-brackets-curly skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">System Codes</h1>
+                                    <h1 class="skills__titles">Java Technologies</h1>
                                     <!-- <span class="skills__subtitle">More than 8 years</span> -->
                                 </div>
 
@@ -204,7 +204,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">RELAP5</h3>
+                                        <h3 class="skills__name">Core Java</h3>
                                         <span class="skills__number">Advanced</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -224,7 +224,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">GOTHIC</h3>
+                                        <h3 class="skills__name">JDBC</h3>
                                         <span class="skills__number">Advanced</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -234,7 +234,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">MARS-KS</h3>
+                                        <h3 class="skills__name">Spring Boot</h3>
                                         <span class="skills__number">Advanced</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -244,7 +244,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">SPACE</h3>
+                                        <h3 class="skills__name">Spring cache</h3>
                                         <span class="skills__number">Advanced</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -254,7 +254,17 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">CAP</h3>
+                                        <h3 class="skills__name">Spring cloud</h3>
+                                        <span class="skills__number">Advanced</span> 
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percantage skills__sys-code"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">MicroServices</h3>
                                         <span class="skills__number">Advanced</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -270,7 +280,7 @@
                                 <i class="uil uil-vector-square skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">CFD Codes</h1>
+                                    <h1 class="skills__titles">Frontend Technologies</h1>
                                     <!-- <span class="skills__subtitle">More than 2 years</span> -->
                                 </div>
 
@@ -280,7 +290,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">OpenFOAM</h3>
+                                        <h3 class="skills__name">HTML</h3>
                                         <span class="skills__number">Proficient</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -290,8 +300,48 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">CUPID</h3>
-                                        <span class="skills__number">Beginner</span> 
+                                        <h3 class="skills__name">CSS</h3>
+                                        <span class="skills__number">Proficient</span> 
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percantage skills__40"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">JavaScript</h3>
+                                        <span class="skills__number">Proficient</span> 
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percantage skills__40"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Angular</h3>
+                                        <span class="skills__number">Proficient</span> 
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percantage skills__20"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">React</h3>
+                                        <span class="skills__number">Proficient</span> 
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percantage skills__20"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">TypeScript</h3>
+                                        <span class="skills__number">Proficient</span> 
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percantage skills__20"></span>
@@ -309,7 +359,7 @@
                                 <i class="uil uil-arrow skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">Programming Codes</h1>
+                                    <h1 class="skills__titles">Database Technologies</h1>
                                     <!-- <span class="skills__subtitle">More than 2 years</span> -->
                                 </div>
 
@@ -319,7 +369,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">MATLAB</h3>
+                                        <h3 class="skills__name">MySQL</h3>
                                         <span class="skills__number">Proficient</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -329,7 +379,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">FORTRAN</h3>
+                                        <h3 class="skills__name">PostgreSQL</h3>
                                         <span class="skills__number">Intermediate</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -339,8 +389,8 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">C++</h3>
-                                        <span class="skills__number">Beginner</span> 
+                                        <h3 class="skills__name">DynamoDB</h3>
+                                        <span class="skills__number">Intermediate</span> 
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percantage skills__20"></span>
@@ -349,7 +399,7 @@
                                 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">HTML/CSS</h3>
+                                        <h3 class="skills__name">Couchbase</h3>
                                         <span class="skills__number">Intermediate</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -367,7 +417,7 @@
                                 <i class="uil uil-code-branch skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">Miscellaneous </h1>
+                                    <h1 class="skills__titles"> AWS Cloud Services</h1>
                                     <!-- <span class="skills__subtitle">More than 2 years</span> -->
                                 </div>
 
@@ -377,7 +427,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">DOS/UNIX</h3>
+                                        <h3 class="skills__name">EC2</h3>
                                         <span class="skills__number">Beginner</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -387,7 +437,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">CATIA</h3>
+                                        <h3 class="skills__name">IAM</h3>
                                         <span class="skills__number">Intermediate</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -397,7 +447,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Origin</h3>
+                                        <h3 class="skills__name">RDS</h3>
                                         <span class="skills__number">Advanced</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -407,7 +457,7 @@
                                 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">ParaView</h3>
+                                        <h3 class="skills__name">S3</h3>
                                         <span class="skills__number">Proficient</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -417,7 +467,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Mathcad</h3>
+                                        <h3 class="skills__name">DynamoDB</h3>
                                         <span class="skills__number">Proficient</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -427,7 +477,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Git/GitHub</h3>
+                                        <h3 class="skills__name">VPC</h3>
                                         <span class="skills__number">Intermediate</span> 
                                     </div>
                                     <div class="skills__bar">
@@ -435,15 +485,6 @@
                                     </div>
                                 </div>
 
-                                <div class="skills__data">
-                                    <div class="skills__titles">
-                                        <h3 class="skills__name">MS Office</h3>
-                                        <span class="skills__number">Advanced</span> 
-                                    </div>
-                                    <div class="skills__bar">
-                                        <span class="skills__percantage skills__100"></span>
-                                    </div>
-                                </div>
                             </div>
                         </div>  
 
