update work and school

--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                         </div>  
 
                         <!--==================== SKILLS 7 ====================-->
-                        <div class="skills__content skills__open">
+                        <div class="skills__content skills__close">
                             <div class="skills__header">
                                 <i class="uil uil-brackets-curly skills__icon"></i>
 
@@ -707,12 +707,12 @@
                              <!--==================== QUALIFICATION  1 ====================-->
                              <div class="qualification__data">
                                 <div>
-                                    <span class="qualification__degree">B.Sc.</span>
-                                    <h3 class="qualification__tittle">Nuclear Energy Engineering</h3>
-                                    <span class="qualification__subtitle">Hacettepe University</span>
+                                    <span class="qualification__degree">Bachelors</span>
+                                    <h3 class="qualification__tittle">Computer science and Engineering</h3>
+                                    <span class="qualification__subtitle">JawharlalNehru Technological university, Anantapur</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2008 - 2013
+                                        2011 - 2015
                                     </div>
                                 </div>
                                 <div>
@@ -730,55 +730,17 @@
                                 </div>
 
                                 <div>
-                                    <span class="qualification__degree">M.Sc.</span>
-                                    <h3 class="qualification__tittle">Nuclear Power Plant Engineering</h3>
-                                    <span class="qualification__subtitle">KINGS</span>
+                                    <span class="qualification__degree">Masters</span>
+                                    <h3 class="qualification__tittle">Computer Science</h3>
+                                    <span class="qualification__subtitle">University of Central Florida, Orlando</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2014 - 2016
+                                        2022 - 2024
                                     </div>
                                 </div>
 
                             </div>
 
-                             <!--==================== QUALIFICATION  3 ====================-->
-                             <div class="qualification__data">
-                                <div>
-                                    <span class="qualification__degree">Ph.D.</span>
-                                    <h3 class="qualification__tittle">Nuclear Engineering</h3>
-                                    <span class="qualification__subtitle">Seoul National University</span>
-                                    <div class="qualification__calendar">
-                                        <i class="uil uil-calendar-alt"></i>
-                                        2017 - Present
-                                    </div>
-                                </div>
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
-                                </div>
-                            </div>
-
-                             <!--==================== QUALIFICATION  4 ====================-->
-                             <div class="qualification__data">
-                                <!-- <div></div> -->
-
-                                <!-- <div>
-                                    <span class="qualification__rounder"></span> -->
-                                    <!-- <span class="qualification__line"></span> -->
-                                <!-- </div> -->
-
-                                <!-- <div>
-                                    <h3 class="qualification__tittle">Nuclear Engineer</h3>
-                                    <span class="qualification__subtitle">Hacettepe University</span>
-                                    <div class="qualification__calendar">
-                                        <i class="uil uil-calendar-alt"></i>
-                                        2008 - 2013
-                                    </div>
-                                </div> -->
-
-
-                                
-                            </div>
 
                         </div>
 
@@ -787,11 +749,11 @@
                             <!--==================== QUALIFICATION  1 ====================-->
                             <div class="qualification__data">
                                <div>
-                                   <h3 class="qualification__tittle">R&D Engineer</h3>
-                                   <span class="qualification__subtitle">Bil-Plas Industry</span>
+                                   <h3 class="qualification__tittle">Software Development Engineer II</h3>
+                                   <span class="qualification__subtitle">Comcast</span>
                                    <div class="qualification__calendar">
                                        <i class="uil uil-calendar-alt"></i>
-                                       2013 - 2014
+                                       2020 - 2022
                                    </div>
                                </div>
                                <div>
@@ -809,34 +771,15 @@
                                </div>
 
                                <div>
-                                   <h3 class="qualification__tittle">Assistant Manager</h3>
-                                   <span class="qualification__subtitle">FNC Technology</span>
+                                   <h3 class="qualification__tittle">Junior Java Developer</h3>
+                                   <span class="qualification__subtitle">Bose Corporation</span>
                                    <div class="qualification__calendar">
                                        <i class="uil uil-calendar-alt"></i>
-                                       2016 - 2019
+                                       2019 - 2020
                                    </div>
                                </div>
-
                            </div>
-
-                            <!--==================== QUALIFICATION  3 ====================-->
-                            <div class="qualification__data">
-                               <div>
-                                   <h3 class="qualification__tittle">Associate Manager</h3>
-                                   <span class="qualification__subtitle">FNC Technology</span>
-                                   <div class="qualification__calendar">
-                                       <i class="uil uil-calendar-alt"></i>
-                                       2019 - Present
-                                   </div>
-                               </div>
-                               <div>
-                                   <span class="qualification__rounder"></span>
-                                   <!-- <span class="qualification__line"></span> -->
-                               </div>
-                           </div>
-
                        </div>
-
                     </div>
                 </div>
             </section>
