--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
                     <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">SMR & MMR</h3>
+                            <h3 class="projects__title">Comcast Payment service</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link projects__button">
@@ -844,21 +844,21 @@
 
                         <div class="projects__modal">
                             <div class="projects__modal-content">
-                                <h4 class="projects__modal-title">Small and Micro Modular Reactors Technology Analyses </h4>
+                                <h4 class="projects__modal-title">Java Development Engineer </h4>
                                 <i class="uil uil-times projects__modal-close"></i>
 
                                 <ul class="projects__modal-projects grid">
                                     <li class="projects__modal-project">
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>Literature and Technology Review</p>
+                                        <p>Develop and implement web services and REST API's </p>
                                     </li>
                                     <li class="projects__modal-project">
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>Technical Feasibility Analysis</p>
+                                        <p>Upgraded all microservices from java 8 to java 11</p>
                                     </li>
                                     <li class="projects__modal-project">
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>Commercial Feasibility Analysis</p>
+                                        <p>Implemented CI/CD Pipelines i using Concourse CI</p>
                                     </li>
                                 </ul>
                             </div>
@@ -869,7 +869,7 @@
                     <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">SMART</h3>
+                            <h3 class="projects__title">Bose Corporation</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link projects__button">
@@ -879,50 +879,23 @@
 
                         <div class="projects__modal">
                             <div class="projects__modal-content">
-                                <h4 class="projects__modal-title">System-Integrated Modular Advanced Reactor Passive Containment Cooling System</h4>
+                                <h4 class="projects__modal-title">Java Developer</h4>
                                 <i class="uil uil-times projects__modal-close"></i>
 
                                 <ul class="projects__modal-projects grid">
                                     <li class="projects__modal-project">
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>Modeling of SMART CPRSS through GOTHIC</p>
+                                        <p>Develop and implement web applications and CMS Solutions using Adobe Experience Manager Version 6.5</p>
                                     </li>
                                     <li class="projects__modal-project">
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>Literature Survey for the Design and Arrangement of Sparger Layout for SMART CPRSS</p>
+                                        <p>Implemented Kafka consumers and producers in microservices to enable seamless and efficient data exchange</p>
                                     </li>
                                         <li class="projects__modal-project-ind">
                                             <i class="uil uil-check projects__modal-icon"></i>
-                                            <p>Direct contact condensation</p>
+                                            <p>Implemented RESTful APIs to expose functionality and data to client applications and store into dynamoDB</p>
                                         </li>
-                                        <li class="projects__modal-project-ind">
-                                            <i class="uil uil-check projects__modal-icon"></i>
-                                            <p>Chugging</p>
-                                        </li>
-                                    <li class="projects__modal-project">
-                                        <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>Modeling of SISTA through MARS-KS</p>
-                                    </li>
-                                    <li class="projects__modal-project">
-                                        <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>CAP Verification</p>
-                                    </li>
-                                        <li class="projects__modal-project-ind">
-                                            <i class="uil uil-check projects__modal-icon"></i>
-                                            <p>Simulations of condensation and boiling conceptual problems through MARS</p>
-                                        </li>
-                                        <li class="projects__modal-project-ind">
-                                            <i class="uil uil-check projects__modal-icon"></i>
-                                            <p>Simulations of a conceptual problem through MARS and SPACE</p>
-                                        </li>
-                                    <li class="projects__modal-project">
-                                        <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>CAP Input Preparation for sub P/T Analysis</p>
-                                    </li>
-                                    <li class="projects__modal-project">
-                                        <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>CPRSS Hydraulics and Heat structure Calculation Sheet Preparation for CAP</p>
-                                    </li>
+                                   </li>
                                 </ul>
                             </div>
                         </div>
