--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <!-- HTML Meta Tags -->
         <title>Babu's Portfolio 👋</title>
-        <meta name="description" content="High-level experience in nuclear safety analysis and multinational nuclear project development.">
+        <meta name="description" content="High-level experience in Spring-boot java development.">
 
 
     </head>
