line fix in qualifaction

--- a/index.html
+++ b/index.html
@@ -747,6 +747,7 @@
                         <!--==================== QUALIFICATION CONTENT 2 ====================-->
                         <div class="qualification__content" data-content id="work">
 
+
                              <!--==================== QUALIFICATION  4 ====================-->
                              <div class="qualification__data">
                                 <div>
@@ -759,7 +760,7 @@
                                 </div>
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
+                                    <span class="qualification__line"></span>
                                 </div>
                             </div>
  
@@ -778,9 +779,10 @@
                                 </div>
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
+                                    <span class="qualification__line"></span>
                                 </div>
                             </div>
+
 
                             <!--==================== QUALIFICATION  1 ====================-->
                             <div class="qualification__data">
